@@ -1,6 +1,10 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-03-08  Ben Elliston  <bje@au.ibm.com>
+	* config/fp-bit.h (CMPtype): Typedef to a word mode integer.
+
+	Backport from mainline
  	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
 	(LIBGCC2_WORDS_BIG_ENDIAN): Define.
  
